* 2013-08-06 - thorben.betten@open-xchange.com

 - Fix for bug 27849: Add an option to specify characters that are not allowed to be contained in a mailbox name

* 2013-08-05 - thorben.betten@open-xchange.com

 - Fix for bug 28039: Added null guard to SOAP call

* 2013-08-01 - marcus.klein@open-xchange.com

 - Fix for bug 27840: Switched task types for actual and target costs to DECIMAL(12,2) in the database and BigDecimal in Java to be able to
   store accurate monetary values.

* 2013-08-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 27975: Also try full login info as read from principal URL when resolving the user
 - Fix for bug 27961: Catch & log hazelcast exceptions during OSGi event handling

* 2013-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 27957: Retrieve user by user identifier, not by its contact identifier

* 2013-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 27767: Refactored to use "ignoreTranslation" flag in JSON layer only to not affect folder caches
 - Fix for bug 27914: Interpret "Inbox/" full name prefix as "INBOX/"
 - Fix for bug 27891: Check for valid values provided for mandatory fields in update attempt
 - Fix for bug 27856: Ignore .eml file attachments with disposition set to "attachment"

* 2013-07-30 - martin.herfurth@open-xchange.com

 - Fix for bug 27581: Removed Direct Link label from external invitation mails.
 - Fix for bug 27314: Missing folder id on itip analyze response with exceptions.

* 2013-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 27868: Added null guard
 - Fix for bug 27872: Introduced possibility to output unparsable images to disk for debugging purpose
 - Fix for bug 27477: Refactored IMAP exception class to let its error message reside in a dedicated translatable class file
 - Fix for bug 27892: Introduced capability for global address book "gab"

* 2013-07-30 - tobias.friedrich@open-xchange.com
