@@ -1,6 +1,7 @@
 * 2013-08-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 27849: Add an option to specify characters that are not allowed to be contained in a mailbox name
+ - Fix for bug 28070: Retry with "MS932" charset if "Shift-JIS" charset yields \ufffd
 
 * 2013-08-05 - thorben.betten@open-xchange.com
 
